--- a/Templates/List_templates.html
+++ b/Templates/List_templates.html
@@ -128,7 +128,7 @@
 </div>
 
 <div id="about-account-template" style="display:none;">
-  <p>
+  <p style="font-size:18px">
     <b>Username: </b> {{username}}<br/>
     <b>Name: </b> {{firstname}} {{lastname}}<br/>
     <b>Email: </b> {{email}}
