--- a/Templates/List_templates.html
+++ b/Templates/List_templates.html
@@ -179,7 +179,7 @@
         <p><b>Relationship:</b> {{relationship}}</p>
         <p><b>Event Channel:</b> {{e_cid}}</p>
         <p><b>Attributes:</b> {{attributes}}</p>
-         <p style="position:relative; top:-20px"><a id="reject-button" style="float:right;" href="#" data-role="button" data-icon="reject" class="ui-btn ui-icon-delete RejectButton">Reject</a></p>
+         <p style="position:relative; top:-20px"><a id="reject-button" style="float:right;" href="#" data-role="button" data-icon="reject" class="ui-btn ui-icon-delete rejectButton">Reject</a></p>
          <p style="position:relative; top:-20px"><a id="approve-button" style="float:right;" href="#"  data-channelname= "{{c_name}}" data-eventeci="{{e_cid}}" data-role="button" data-icon="approve" class="ui-btn ui-icon-delete approveButton ">Approve</a></p>
      </div>
    </div>
@@ -193,7 +193,7 @@
         <p><b>Relationship:</b> {{relationship}}</p>
         <p><b>Target Channel:</b> {{t_cid}}</p>
         <p><b>Attributes:</b> {{attributes}}</p>
-         <p style="position:relative; top:-20px"><a style="float:right; margin: 0px;" href="#" data-role="button" data-icon="cancel" class="ui-btn ui-icon-delete CancelSubscriptionButton">Cancel</a></p>
+         <p style="position:relative; top:-20px"><a style="float:right; margin: 0px;" href="#" data-channelname= "{{c_name}}" data-role="button" data-icon="cancel" class="ui-btn ui-icon-delete CancelSubscriptionButton">Cancel</a></p>
          <br>
      </div>
    </div>
@@ -208,7 +208,7 @@
         <p><b>Event Channel:</b> {{e_cid}}</p>
         <p><b>Back Channel:</b> {{b_cid}}</p>
         <p><b>Attributes:</b> {{attributes}}</p>
-         <p style="position:relative; top:-20px"><a style="float:right;" href="#" 
+         <p style="position:relative; top:-20px"><a style="float:right;" href="#" data-channelname= "{{c_name}}"
          data-role="button" data-icon="un-subscribe" class="ui-btn ui-icon-delete UnSubscribeButton">Un-Subscribe</a></p>
      </div>
    </div>
