data set for rejecting

--- a/Templates/List_templates.html
+++ b/Templates/List_templates.html
@@ -179,7 +179,7 @@
         <p><b>Relationship:</b> {{relationship}}</p>
         <p><b>Event Channel:</b> {{e_cid}}</p>
         <p><b>Attributes:</b> {{attributes}}</p>
-         <p style="position:relative; top:-20px"><a id="reject-button" style="float:right;" href="#" data-role="button" data-icon="reject" class="ui-btn ui-icon-delete rejectButton">Reject</a></p>
+         <p style="position:relative; top:-20px"><a id="reject-button" style="float:right;" href="#" data-channelname="{{c_name}}" data-eventeci="{{e_cid}}" data-role="button" data-icon="reject" class="ui-btn ui-icon-delete rejectButton">Reject</a></p>
          <p style="position:relative; top:-20px"><a id="approve-button" style="float:right;" href="#"  data-channelname="{{c_name}}" data-eventeci="{{e_cid}}" data-role="button" data-icon="approve" class="ui-btn ui-icon-delete approveButton ">Approve</a></p>
      </div>
    </div>
