pico deletion, some creation relinking

--- a/Templates/List_templates.html
+++ b/Templates/List_templates.html
@@ -142,6 +142,7 @@
      <div style = "padding-top: 10px; padding-bottom:20px;"> 
 		 <p><b>ECI:</b>{{eci}}</p>
 		 <p style="position:relative; top:-20px"><a id="{{eci}}" style="margin-top:-25px;float:right;" class="ui-btn ui-icon-arrow-r ui-btn-icon-right openPicoButton">Open This Pico</a></p>
+		 <p style="position:relative; top:-20px"><a id="{{eci}}" style="margin-top:-25px;float:right;" class="ui-btn ui-icon-delete ui-btn-icon-right deletePicoButton">Delete</a></p>
       </div>
    </div>
 </div>
