carat down , up

--- a/Templates/List_templates.html
+++ b/Templates/List_templates.html
@@ -166,9 +166,9 @@
   <!-- -------------------- <End oF> Scheduled Templates---------------------- -->
   <!-- -------------------- subscriptions Templates---------------------- -->
 <div id="subscription-tab-template" style="display:none;">
-   <div id="{{Type}}" data-role="collapsible" data-filtertext="{{Type}}" data-theme="a" data-content-theme="a" data-collapsed-icon= "arrow-r" data-expanded-icon="arrow-d" >
+   <div id="{{Type}}" data-role="collapsible" data-filtertext="{{Type}}" data-theme="a" data-content-theme="a" data-collapsed-icon= "carat-d" data-expanded-icon="carat-u" >
      <h4>{{Type}}</h4>
-    <div data-role="collapsible-set" data-filter="true" data-content-theme="a" data-iconpos="right" id="{{Type}}2" data-collapsed-icon= "arrow-r" data-expanded-icon="arrow-d" >
+    <div data-role="collapsible-set" data-filter="true" data-content-theme="a" data-iconpos="right" id="{{Type}}2" data-collapsed-icon= "carat-d" data-expanded-icon="carat-u" >
     </div>
    </div>
 </div>
