--- a/Templates/List_templates.html
+++ b/Templates/List_templates.html
@@ -137,9 +137,10 @@
 
 <div id="child-pico-template" style="display:none">
    <div data-role="collapsible" data-theme="a" data-content-theme="a" data-collapsed-icon = "carat-d" data-expanded-icon = "carat-u">
-     <h4>{{eci}}</h4>
+     <h4>{{picoName}} ({{eci}})</h4>
 	 
      <div style = "padding-top: 10px; padding-bottom:20px;"> 
+		 <p><b>Name:</b>{{picoName}}</p>
 		 <p><b>ECI:</b>{{eci}}</p>
 		 <p style="position:relative; top:-20px"><a id="{{eci}}" style="margin-top:-25px;float:right;" class="ui-btn ui-icon-arrow-r ui-btn-icon-right openPicoButton">Open This Pico</a></p>
 		 <p style="position:relative; top:-20px"><a id="{{eci}}" style="margin-top:-25px;float:right;" class="ui-btn ui-icon-delete ui-btn-icon-right deletePicoButton">Delete</a></p>
