Client Key  ​not eci

--- a/Templates/List_templates.html
+++ b/Templates/List_templates.html
@@ -76,7 +76,7 @@
        <p>
 		   <img src={{appImageURL}} onerror="this.src='http://news.pcc.edu/wp-content/uploads/2015/04/NasaI.jpg'" width="200" height="150"> 
 		   <br>
-		   <b>client ECI:</b> {{appECI}}
+		   <b>Client Key: </b> {{appECI}}
        </p>
      </div>
    </div>
