--- a/_layouts/app.html
+++ b/_layouts/app.html
@@ -92,8 +92,8 @@
     <script src="js/handlebars-v1.3.0.js"></script>
     <script src="js/app.js"></script>
 
-    <script src="js/nano_manager.js"></script>
-    <script src="js/nano_manager-config.js"></script>
+    <script src="js/wrangler.js"></script>
+    <script src="js/wrangler-config.js"></script>
 
     <script src="js/devtools-api.js"></script>
     <script src="js/devtools-api-config.js"></script>
