fixed issue #69, add install button

--- a/Templates/List_templates.html
+++ b/Templates/List_templates.html
@@ -13,6 +13,8 @@
 
          <p style="position:relative; top:-20px"><a href="#" id="{{rid}}" style="float:right;" class="ui-link ui-btn ui-icon-delete ui-btn-icon-right deleteButton">Delete</a></p>
 
+         <p style="position:relative; top:-20px"><a href="#" id="{{rid}}" style="float:right;" class="ui-link ui-btn ui-icon-delete ui-btn-icon-right installButton">Install</a></p>
+
          <p>Actions to take:</p>
      </div>
    </div>
