time zone edits, moment added

--- a/_layouts/app.html
+++ b/_layouts/app.html
@@ -97,7 +97,9 @@
 
     <script src="js/devtools-api.js"></script>
     <script src="js/devtools-api-config.js"></script>
-
+    <script src="js/moment.js"></script>
+    <script src="js/moment-timezone.js"></script>
+    
    <!-- <script type="text/javascript" src="https://rawgit.com/Picolab/picologging/master/js/picologging-api.js"></script> needs to be updated not to use CloudOS.... untill then use local copy -->
     <script type="text/javascript" src="js/picologging-api.js"></script>
 
