--- a/_layouts/code.html
+++ b/_layouts/code.html
@@ -57,6 +57,8 @@
   <script src="https://rawgit.com/kre/devtools/gh-pages/js/devtools-api.js"></script>
   <script src="js/wrangler.js"></script>
   <script src="js/wrangler-config.js"></script>
+  <script src="js/moment.js"></script>
+  <script src="js/moment-timezone.js"></script>
  <!-- <script src="js/devtools-api-config.js"></script> -->
 
 
