--- a/Templates/List_templates.html
+++ b/Templates/List_templates.html
@@ -13,7 +13,7 @@
 
          <p style="position:relative; top:-20px"><a href="#" id="{{rid}}" style="float:right;" class="ui-btn ui-icon-refresh ui-btn-icon-right flushButton">Flush</a></p>
 
-         <p style="position:relative; top:-20px"><a href="#" id="{{rid}}" style="float:right;" class="ui-link ui-btn ui-icon-delete ui-btn-icon-right deleteButton">Delete</a></p>
+         <!--  <p style="position:relative; top:-20px"><a href="#" id="{{rid}}" style="float:right;" class="ui-link ui-btn ui-icon-delete ui-btn-icon-right deleteButton">Delete</a></p>  -->
 
          <p style="position:relative; top:-20px"><a href="#" id="{{rid}}" style="float:right;" class="ui-link ui-btn ui-icon-arrow-d ui-btn-icon-right installButton">Install</a></p>
 
