Adding Pico Name Header
Updates the pico name in the banner when navigating picos.

--- a/_includes/pico-name-header.html
+++ b/_includes/pico-name-header.html
@@ -1,4 +1,3 @@
-   
-   <div data-role="header" data-theme="e" data-position="inline" class="ui-header ui-bar-b" role="banner">
-   <h4 class="ui-title">Current Pico: <span id="piconn"></span> </h4> 
+   <div data-role="button" data-theme="b" data-position="inline" class="ui-header ui-bar-e"> 
+   <h4 class="ui-title"><span class="picoNameBar"></span> </h4> 
    </div><!-- /pico-name-header -->
