Restoring Delete Button
.

--- a/Templates/List_templates.html
+++ b/Templates/List_templates.html
@@ -7,13 +7,13 @@
      </h4>
 
     <div style = "padding-top: 10px; padding-bottom:20px;"> 
-         <p><b>Ruleset ID:</b> {{rid}}
+         <p><b>Ruleset ID:</b> {{rid}} </p>
          <p>{{description}}</p>
          <p style="position:relative; top:-20px"><a style="float:right;" href="#updating-url?rid={{rid}}&url={{encoded}}" data-role="button" data-icon="edit" class="ui-link ui-btn ui-icon-edit ui-btn-icon-right">Edit URL</a></p>
 
          <p style="position:relative; top:-20px"><a href="#" id="{{rid}}" style="float:right;" class="ui-btn ui-icon-refresh ui-btn-icon-right flushButton">Flush</a></p>
 
-         <!--  <p style="position:relative; top:-20px"><a href="#" id="{{rid}}" style="float:right;" class="ui-link ui-btn ui-icon-delete ui-btn-icon-right deleteButton">Delete</a></p>  -->
+         <p style="position:relative; top:-20px"><a href="#" id="{{rid}}" style="float:right;" class="ui-link ui-btn ui-icon-delete ui-btn-icon-right deleteButton">Delete</a></p>
 
          <p style="position:relative; top:-20px"><a href="#" id="{{rid}}" style="float:right;" class="ui-link ui-btn ui-icon-arrow-d ui-btn-icon-right installButton">Install</a></p>
 
