--- a/Templates/List_templates.html
+++ b/Templates/List_templates.html
@@ -71,11 +71,11 @@
 </div>
 <!--      Authorize clients      appimageURL is not being used--> 
 <div id="authorized-clients-template" style="display:none;">
-   <div id="{{appECI}}" data-role="collapsible" data-filtertext="{{appName}} ({{appECI}})" data-theme="a" data-content-theme="a" data-collapsed-icon= "carat-d" data-expanded-icon="carat-u">
-     <h4>{{appName}} ({{appECI}})</h4>
+   <div id="{{appECI}}" data-role="collapsible" data-filtertext="{{appClientName}} ({{appECI}})" data-theme="a" data-content-theme="a" data-collapsed-icon= "carat-d" data-expanded-icon="carat-u">
+     <h4>{{appClientName}} ({{appECI}})</h4>
     <div style = "padding-top: 18px; padding-bottom:24px;"> 
          <p style="position:relative; top:-10px"><a style="float:right;" href="#confirm-client-remove?client={{appECI}}" data-role="button" data-icon="delete" class="ui-btn ui-icon-delete ">Remove</a></p>
-         <p style="position:relative; top:-10px"><a style="float:right;" href="#update-client?client={{appECI}}" data-role="button" data-icon="edit" class="ui-link ui-btn ui-icon-edit ui-btn-icon-right">Edit client</a></p>
+         <p style="position:relative; top:-10px"><a style="float:right;" href="#update-client?client={{appECI}}&appName={{appClientName}}&appDesc={{appDescription}}&appImg={{appImageURL}}&appCb={{appCallbackURL}}&appDec={{appDeclinedURL}}&appInfo={{appInfoPageURL}}&appRids={{appBootstrapRids}}" data-role="button" data-icon="edit" class="ui-link ui-btn ui-icon-edit ui-btn-icon-right">Edit client</a></p>
          <!--<h2>client Attributes</h2>-->
        <p>
 		   <img src={{appImageURL}} onerror="this.src='http://news.pcc.edu/wp-content/uploads/2015/04/NasaI.jpg'" width="200" height="150"> 
