Fixed changePage failure for Update Clients
Page now changes to Client Registration page when clicking the Update
button.

Also, fixed an issue where the ‘/‘ character broke the Update Clients
page

--- a/Templates/List_templates.html
+++ b/Templates/List_templates.html
@@ -75,7 +75,7 @@
      <h4>{{appClientName}} ({{appECI}})</h4>
     <div style = "padding-top: 18px; padding-bottom:24px;"> 
          <p style="position:relative; top:-10px"><a style="float:right;" href="#confirm-client-remove?client={{appECI}}" data-role="button" data-icon="delete" class="ui-btn ui-icon-delete ">Remove</a></p>
-         <p style="position:relative; top:-10px"><a style="float:right;" href="#update-client?client={{appECI}}&appName={{appClientName}}&appDesc={{appDescription}}&appImg={{appImageURL}}&appCb={{appCallbackURL}}&appDec={{appDeclinedURL}}&appInfo={{appInfoPageURL}}&appRids={{appBootstrapRids}}" data-role="button" data-icon="edit" class="ui-link ui-btn ui-icon-edit ui-btn-icon-right">Edit client</a></p>
+         <p style="position:relative; top:-10px"><a style="float:right;" href="#update-client?client={{appECI}}&appName={{appClientName}}&appDesc={{appDescription}}&appImg={{appImgURL}}&appCb={{appCallbackURL}}&appDec={{appDeclinedURL}}&appInfo={{appInfoPageURL}}&appRids={{appBootstrapRids}}" data-role="button" data-icon="edit" class="ui-link ui-btn ui-icon-edit ui-btn-icon-right">Edit client</a></p>
          <!--<h2>client Attributes</h2>-->
        <p>
 		   <img src={{appImageURL}} onerror="this.src='http://news.pcc.edu/wp-content/uploads/2015/04/NasaI.jpg'" width="200" height="150"> 
