Buttons on Subscription page
Fixed issue where buttons overlap text on Subscriptions page.

--- a/Templates/List_templates.html
+++ b/Templates/List_templates.html
@@ -196,14 +196,14 @@
 <div id="subscription-incoming-template" style="display:none;">
    <div id="{{c_name}}"  data-role="collapsible" data-filtertext="{{name}} ({{e_cid}})" data-theme="a" data-content-theme="a">
      <h4>{{name}} ({{e_cid}})</h4>
-    <div style = "padding-top: 18px; padding-bottom:24px;"> 
+    <div style = "padding-top: 18px; padding-bottom:44px;"> 
         <p><b>Name:</b> {{name}}</p>
         <p><b>Name Space:</b> {{name_space}}</p> 
         <p><b>Relationship:</b> {{relationship}}</p>
         <p><b>Event Channel:</b> {{e_cid}}</p>
         <p><b>Attributes:</b> {{attributes}}</p>
-         <p style="position:relative; top:-40px"><a id="reject-button" style="float:right;" href="#" data-channelname="{{c_name}}" data-eventeci="{{e_cid}}" data-role="button" data-icon="reject" class="ui-btn ui-icon-delete rejectButton">Reject</a></p>
-         <p style="position:relative; top:-40px"><a id="approve-button" style="float:right;" href="#"  data-channelname="{{c_name}}" data-eventeci="{{e_cid}}" data-role="button" data-icon="approve" class="ui-btn ui-icon-delete approveButton ">Approve</a></p>
+         <p style="position:relative; top:-20px"><a id="reject-button" style="float:right;" href="#" data-channelname="{{c_name}}" data-eventeci="{{e_cid}}" data-role="button" data-icon="reject" class="ui-btn ui-icon-delete rejectButton">Reject</a></p>
+         <p style="position:relative; top:-20px"><a id="approve-button" style="float:right;" href="#"  data-channelname="{{c_name}}" data-eventeci="{{e_cid}}" data-role="button" data-icon="approve" class="ui-btn ui-icon-delete approveButton ">Approve</a></p>
      </div>
    </div>
 </div>
@@ -217,7 +217,7 @@
         <p><b>Relationship:</b> {{relationship}}</p>
         <p><b>Target Channel:</b> {{t_cid}}</p>
         <p><b>Attributes:</b> {{attributes}}</p>
-         <p style="position:relative; top:-10px"><a style="float:right; margin: 0px;" href="#" data-channelname="{{c_name}}" data-role="button" data-icon="cancel" class="ui-btn ui-icon-delete CancelSubscriptionButton ">Cancel</a></p>
+         <p style="position:relative; top:-12px"><a style="float:right; margin: 0px;" href="#" data-channelname="{{c_name}}" data-role="button" data-icon="cancel" class="ui-btn ui-icon-delete CancelSubscriptionButton ">Cancel</a></p>
          <br>
      </div>
    </div>
@@ -226,14 +226,14 @@
 <div id="subscription-template" style="display:none;">
    <div id="{{c_name}}" data-role="collapsible" data-filtertext="{{name}} ({{e_cid}})" data-theme="a" data-content-theme="a">
      <h4>{{name}} ({{e_cid}})</h4>
-    <div style = "padding-top: 18px; padding-bottom:24px;"> 
+    <div style = "padding-top: 18px; padding-bottom:44px;"> 
         <p><b>Name:</b> {{name}}</p>
         <p><b>Name Space:</b> {{name_space}}</p> 
         <p><b>Relationship:</b> {{relationship}}</p>
         <p><b>Event Channel:</b> {{e_cid}}</p>
         <p><b>Back Channel:</b> {{b_cid}}</p>
         <p><b>Attributes:</b> {{attributes}}</p>
-         <p style="position:relative; top:-40px"><a style="float:right;" href="#" data-channelname="{{c_name}}"
+         <p style="position:relative; top:12px"><a style="margin-top:-25px;float:right;" href="#" data-channelname="{{c_name}}"
          data-role="button" data-icon="un-subscribe" class="ui-btn ui-icon-delete UnSubscribeButton ">UnSubscribe</a></p>
      </div>
    </div>
