--- a/Templates/List_templates.html
+++ b/Templates/List_templates.html
@@ -215,7 +215,7 @@
         <p><b>Name:</b> {{name}}</p>
         <p><b>Name Space:</b> {{name_space}}</p> 
         <p><b>Relationship:</b> {{relationship}}</p>
-        <p><b>Target Channel:</b> {{t_cid}}</p>
+        <p><b>Event Channel:</b> {{t_cid}}</p>
         <p><b>Attributes:</b> {{attributes}}</p>
          <p style="position:relative; top:-12px"><a style="float:right; margin: 0px;" href="#" data-channelname="{{c_name}}" data-role="button" data-icon="cancel" class="ui-btn ui-icon-delete CancelSubscriptionButton ">Cancel</a></p>
          <br>
@@ -230,8 +230,8 @@
         <p><b>Name:</b> {{name}}</p>
         <p><b>Name Space:</b> {{name_space}}</p> 
         <p><b>Relationship:</b> {{relationship}}</p>
-        <p><b>Event Channel:</b> {{e_cid}}</p>
-        <p><b>Back Channel:</b> {{b_cid}}</p>
+        <p><b>Outbound:</b> {{e_cid}}</p>
+        <p><b>Inbound:</b> {{b_cid}}</p>
         <p><b>Attributes:</b> {{attributes}}</p>
          <p style="position:relative; top:12px"><a style="margin-top:-25px;float:right;" href="#" data-channelname="{{c_name}}"
          data-role="button" data-icon="un-subscribe" class="ui-btn ui-icon-delete UnSubscribeButton ">UnSubscribe</a></p>
