Pico life cycle corrections.
this will correct some current issues with creating and deleting picos.

--- a/Templates/List_templates.html
+++ b/Templates/List_templates.html
@@ -173,13 +173,13 @@
 
 <div id="child-pico-template" style="display:none">
    <div data-role="collapsible" data-theme="a" data-content-theme="a" data-collapsed-icon = "carat-d" data-expanded-icon = "carat-u">
-     <h4>{{picoName}} ({{eci}})</h4>
+     <h4>{{name}} ({{eci}})</h4>
 	 
      <div style = "padding-top: 10px; padding-bottom:50px;"> 
-		 <p><b>Name: </b>{{picoName}}</p>
+		 <p><b>Name: </b>{{name}}</p>
 		 <p><b>ECI: </b>{{eci}}</p>
 		 <p style="position:relative; top:20px"><a id="{{eci}}" style="margin-top:-25px;float:right;" class="ui-btn ui-icon-arrow-r ui-btn-icon-right openPicoButton childPicoButton">Open This Pico</a></p>
-		 <p style="position:relative; top:20px"><a id="{{eci}}" style="margin-top:-25px;float:right;" class="ui-btn ui-icon-delete ui-btn-icon-right deletePicoButton childPicoButton">Delete</a></p>
+		 <p style="position:relative; top:20px"><a id="{{name}}" style="margin-top:-25px;float:right;" class="ui-btn ui-icon-delete ui-btn-icon-right deletePicoButton childPicoButton">Delete</a></p>
       </div>
    </div>
 </div>
