removed wrangler.js

--- a/_layouts/app.html
+++ b/_layouts/app.html
@@ -92,7 +92,7 @@
     <script src="js/handlebars-v1.3.0.js"></script>
     <script src="js/app.js"></script>
 
-    <script src="js/wrangler.js"></script>
+    <script src="https://raw.githubusercontent.com/Picolab/wrangler/master/js/wrangler.js"></script>
     <script src="js/wrangler-config.js"></script>
 
     <script src="js/devtools-api.js"></script>
