remove wrangler.js

--- a/_layouts/code.html
+++ b/_layouts/code.html
@@ -55,7 +55,7 @@
   <script src="js/handlebars-v1.3.0.js"></script>
   <!--getting access for devtools-api-->
   <script src="https://rawgit.com/kre/devtools/gh-pages/js/devtools-api.js"></script>
-  <script src="js/wrangler.js"></script>
+  <script src="https://rawgit.com/Picolab/wrangler/master/js/wrangler.js"></script>
   <script src="js/wrangler-config.js"></script>
   <script src="js/moment.js"></script>
   <script src="js/moment-timezone.js"></script>
