--- a/_layouts/app.html
+++ b/_layouts/app.html
@@ -8,7 +8,7 @@
 <!-- https://github.com/commadelimited/jQuery-Mobile-Bootstrap-Theme -->
 <!-- If we keep this, move into repo -->
 
-<link rel="stylesheet" href="http://code.jquery.com/mobile/1.4.5/jquery.mobile.structure-1.4.5.min.css" />
+<link rel="stylesheet" href="https://code.jquery.com/mobile/1.4.5/jquery.mobile.structure-1.4.5.min.css" />
  
 <link rel="stylesheet" href="themes/devtools-theme.min.css" />
 <link rel="stylesheet" href="themes/jquery.mobile.icons.min.css" />
