More https please

--- a/Templates/List_templates.html
+++ b/Templates/List_templates.html
@@ -110,7 +110,7 @@
          <p style="position:relative; top:-10px"><a style="float:right;" href="#update-client?client={{appECI}}&appName={{appClientName}}&appDesc={{appDescription}}&appImg={{appImgURL}}&appCb={{appCallbackURL}}&appDec={{appDeclinedURL}}&appInfo={{appInfoPageURL}}&appRids={{appBootstrapRids}}" data-role="button" data-icon="edit" class="ui-link ui-btn ui-icon-edit ui-btn-icon-right">Edit client</a></p>
          <!--<h2>client Attributes</h2>-->
        <p>
-		   <img src={{appImageURL}} onerror="this.src='http://news.pcc.edu/wp-content/uploads/2015/04/NasaI.jpg'" width="200" height="150"> 
+		   <img src={{appImageURL}} onerror="this.src='https://news.pcc.edu/wp-content/uploads/2015/04/NasaI.jpg'" width="200" height="150"> 
 		   <br>
 		   <b>Client Key: </b> {{appECI}}
        </p>
