--- a/Templates/List_templates.html
+++ b/Templates/List_templates.html
@@ -81,7 +81,7 @@
 
     <div style = "padding-top: 10px; padding-bottom:40px;"> 
 
-        <p style="position:relative; top:10px"><a href="#" id="{{rid}}" style="margin-top:-25px;float:right;" class="ui-link ui-btn ui-icon-delete ui-btn-icon-right deleteButton listRulesetsButton">Delete</a></p>
+        <p style="position:relative; top:10px"><a href="#" name="{{title}}" style="margin-top:-25px;float:right;" class="ui-link ui-btn ui-icon-delete ui-btn-icon-right deleteButton listRulesetsButton">Delete</a></p>
 
         <p style="position:relative; top:10px"><a style="margin-top:-25px;float:right;" href="#update-prototype?prototype={{title}}" data-role="button" data-icon="edit" class="ui-link ui-btn ui-icon-edit ui-btn-icon-right editURLButton listRulesetsButton">Edit</a></p>
         
