--- a/Templates/List_templates.html
+++ b/Templates/List_templates.html
@@ -13,11 +13,11 @@
 
          <p style="position:relative; top:10px"><a style="margin-top:-25px;float:right;" href="#updating-url?rid={{rid}}&url={{encoded}}" data-role="button" data-icon="edit" class="ui-link ui-btn ui-icon-edit ui-btn-icon-right editURLButton listRulesetsButton">Edit URL</a></p>
 
-         <p style="position:relative; top:10px"><a href="#" id="{{rid}}" style="margin-top:-25px;float:right;" class="ui-btn ui-icon-refresh ui-btn-icon-right flushButton listRulesetsButton">Flush</a></p>
+         <p style="position:relative; top:10px"><a id="{{rid}}" style="margin-top:-25px;float:right;" class="ui-btn ui-icon-refresh ui-btn-icon-right flushButton listRulesetsButton">Flush</a></p>
 
-         <p style="position:relative; top:10px"><a href="#" id="{{rid}}" style="margin-top:-25px;float:right;" class="ui-link ui-btn ui-icon-delete ui-btn-icon-right deleteButton listRulesetsButton">Delete</a></p>
+         <p style="position:relative; top:10px"><a id="{{rid}}" style="margin-top:-25px;float:right;" class="ui-link ui-btn ui-icon-delete ui-btn-icon-right deleteButton listRulesetsButton">Delete</a></p>
 
-         <p style="position:relative; top:10px"><a href="#" id="{{rid}}" style="margin-top:-25px;float:right;" class="ui-link ui-btn ui-icon-arrow-d ui-btn-icon-right installButton listRulesetsButton">Install</a></p>
+         <p style="position:relative; top:10px"><a id="{{rid}}" style="margin-top:-25px;float:right;" class="ui-link ui-btn ui-icon-arrow-d ui-btn-icon-right installButton listRulesetsButton">Install</a></p>
 
      </div>
    </div>
